# claude-gramm

./: .env.example  .gitignore  DESIGN.md  Makefile  entities.yaml
docs/superpowers/specs/: 2026-06-10-jsonl-session-parser-design.md
fixtures/: compacted.sample.json  events.jsonl  malformed.jsonl
parser/: Cargo.toml
parser/src/: lib.rs  main.rs
parser/tests/: cli.rs  compaction.rs  golden.rs
pipeline/: README.md  pyproject.toml
pipeline/src/engram/: __main__.py  backfill.py  cli.py  config.py  distill.py  entities.py  hook.py  ingest.py  llm.py  process.py  render.py  review.py  state.py
pipeline/tests/: _fakes.py  conftest.py  test_backfill.py  test_cli.py  test_config.py  test_distill.py  test_entities.py  test_hook.py  test_ingest.py  test_llm.py  test_process.py  test_render.py  test_review.py  test_state.py
schema/: compacted.schema.json
