[package]
name = "engram-parser"
version = "0.1.0"
edition = "2021"
description = "Tolerant Claude Code JSONL session parser + compactor (engram Ingest)"

[lib]
name = "engram_parser"
path = "src/lib.rs"

[[bin]]
name = "engram-parse"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
serde_json = "1"
