[project]
name = "engram"
version = "0.1.0"
description = "Distill Claude Code sessions into an Obsidian knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "jsonschema>=4.0",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
]

[project.scripts]
engram = "engram.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
